feat: add manifest

--- a/mobile_app/android/app/src/main/res/values/strings.xml
+++ b/mobile_app/android/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="solana_destination_title">Solana Chat</string>
     <string name="bnb_destination_title">Bnb News</string>
     <string name="ai_destination_title">Creative Studio</string>
+    <string name="manifest_destination_title">Manifest</string>
 </resources>
